--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,129 @@
+@import url('https://fonts.googleapis.com/css2?family=Overpass:wght@400;700&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+:root {
+  --Orange: hsl(25, 97%, 53%);
+  --White: hsl(0, 0%, 100%);
+  --Light-Grey: hsla(217, 12%, 63%, 0.12);
+  --Medium-Grey: hsl(216, 12%, 54%);
+  --Dark-Blue: hsl(213, 19%, 18%);
+  --Very-Dark-Blue: hsl(216, 12%, 8%);
+}
+
 .App {
+  font-family: 'Overpass', sans-serif;
+  color: var(--White);
+  background: var(--Very-Dark-Blue);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+}
+
+.attribution {
+  font-size: 12px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.attribution a {
+  color: var(--Orange);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+article {
+  line-height: 1.7;
+  margin: 2rem;
+  width: 375px;
+  max-height: 40vh;
+  border-radius: 1.5rem;
+  background-color: var(--Dark-Blue);
+  padding: 2rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.star {
+  padding: 1rem;
+  border-radius: 100%;
+  background-color: var(--Light-Grey);
+}
+
+p {
+  color: var(--Medium-Grey);
+  font-size: 15px;
+  font-weight: 400;
+  padding-top: 0.5rem;
+}
+
+h1 {
+  font-weight: 700;
+  padding-top: 0.5rem;
+}
+
+.rateButtons {
+  margin: 0rem;
+  min-height: 5rem;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.rateButtons button {
+  height: 3rem;
+  width: 3rem;
+  border-radius: 100%;
+  border: none;
+  font-family: 'Overpass', sans-serif;
+  font-size: 1rem;
+  font-weight: 400;
+  color: var(--Medium-Grey);
+  background: var(--Light-Grey);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.rateButtons button:hover {
+  background: var(--Orange);
+  color: var(--White);
+}
+
+.rateButtons button:focus {
+  background: var(--Medium-Grey);
+  color: var(--White);
+}
+
+.submitButton {
+  width: 100%;
+  min-height: 2.5rem;
+  border-radius: 20px;
+  font-family: 'Overpass', sans-serif;
+  font-size: 1rem;
+  font-weight: 400;
+  letter-spacing: 2px;
+  color: var(--White);
+  background: var(--Orange);
+  border: none;
+}
+
+.submitButton:hover {
+  color: var(--Orange);
+  background: var(--White);
+}
+
+.thankYouCard {
+  text-align: center;
+}
+
+.rating {
+  background-color: var(--Light-Grey);
+  color: var(--Orange);
+  border-radius: 20px;
+  padding: 0.25rem;
+  margin: 1rem 3.5rem;
+}
+
+.illustration {
+  margin: 0.25rem;
 }
